<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cor_home_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login">


        <Button
            android:id="@+id/bookservice"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_above="@id/offerservice"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@drawable/signin"
            android:ems="8"
            android:fontFamily="@font/segoe_ui_bold"
            android:gravity="center"
            android:maxEms="12"
            android:padding="5dp"
            android:text="Sign up"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/offerservice"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_above="@id/_l2"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/signin"
            android:ems="8"
            android:fontFamily="@font/segoe_ui_bold"
            android:gravity="center"
            android:maxEms="12"
            android:padding="5dp"
            android:text="Sign in"
            android:textAllCaps="false"
            android:textColor="@color/top"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/_l2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/_l1"
            android:layout_alignParentBottom="false"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">


            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_margin="2dp"
                android:layout_weight="0.40"
                android:background="@color/grey_400" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center"
                android:text="Please"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center"
                android:text=" read "
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="normal" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_margin="2dp"
                android:layout_weight="0.40"
                android:background="@color/grey_400" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/_l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp"
            android:visibility="visible">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/segoe_ui"
                    android:gravity="right|end"
                    android:text="@string/terms_amp"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/segoe_ui"
                    android:gravity="right|end"
                    android:text="@string/conditions"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.8"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/segoe_ui"
                    android:gravity="right|end"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/segoe_ui"
                    android:gravity="right|end"
                    android:text="@string/policys"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>