<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cor_home_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/up"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="240dp"
            android:background="@drawable/collapse_round_corner"
            android:fillViewport="true"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:scrollbarSize="0dp">

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@android:color/transparent"
                android:gravity="top"
                android:orientation="vertical">


                <RelativeLayout
                    android:id="@+id/_r1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="false"
                        android:layout_gravity="top"
                        android:layout_marginStart="20dp"
                        android:layout_weight="0.2"
                        android:fontFamily="@font/segoe_ui_bold"
                        android:gravity="start"
                        android:paddingEnd="20dp"
                        android:text="New \nAccount"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <ImageView
                        android:id="@+id/img_profilo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="45dp"
                        android:background="@mipmap/ic_camera"
                        android:minWidth="80dp"
                        android:minHeight="80dp"
                        android:scaleType="fitXY" />

                    <TextView
                        android:id="@+id/_t1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_profilo"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="4dp"
                        android:layout_toStartOf="@id/_t2"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/segoe_ui"
                        android:gravity="center_horizontal"
                        android:text="Add"
                        android:textColor="@color/black_overlay"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/_t2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_profilo"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="42dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/segoe_ui"
                        android:gravity="center_horizontal"
                        android:text=" Image"
                        android:textColor="@color/black_overlay"
                        android:textSize="18sp" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/_l1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:background="@android:color/transparent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="false"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/segoe_ui"
                        android:gravity="start|center_vertical"
                        android:text="Register as"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <RadioGroup
                        android:id="@+id/groupradio"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="56dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radia_id1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:fontFamily="@font/segoe_ui_bold"
                            android:text="@string/salon_owner"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/radia_id2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:fontFamily="@font/segoe_ui_bold"
                            android:text="Customer"
                            android:textSize="20sp" />

                    </RadioGroup>

                    <!-- Email Label -->


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/mo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:minHeight="56dp"
                        android:theme="@style/ThemeOverlay.AppCompat.Light"
                        app:boxBackgroundMode="none"
                        app:hintTextAppearance="@style/MyHintText">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/input_user_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/editTextBackground"
                            android:cursorVisible="true"
                            android:drawableStart="@drawable/ic_user"
                            android:focusableInTouchMode="true"
                            android:fontFamily="@font/segoe_ui"
                            android:hint="@string/username"
                            android:imeOptions="actionNext"
                            android:inputType="text|textNoSuggestions"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:minHeight="56dp"
                        android:theme="@style/ThemeOverlay.AppCompat.Light"
                        app:boxBackgroundMode="none"
                        app:hintTextAppearance="@style/MyHintText">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/input_user_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/editTextBackground"
                            android:cursorVisible="true"
                            android:drawableStart="@drawable/ic_phone"
                            android:focusableInTouchMode="true"
                            android:fontFamily="@font/segoe_ui"
                            android:hint="Mobile no"
                            android:imeOptions="actionNext"
                            android:inputType="textNoSuggestions|phone"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:minHeight="56dp"
                        android:theme="@style/ThemeOverlay.AppCompat.Light"
                        app:boxBackgroundMode="none"
                        app:hintTextAppearance="@style/MyHintText">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/input_user_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?attr/editTextBackground"
                            android:drawableStart="@drawable/ic_emailss"
                            android:fontFamily="@font/segoe_ui"
                            android:hint="@string/email"
                            android:imeOptions="actionNext"
                            android:inputType="textCapWords|textNoSuggestions"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:minHeight="56dp"
                        android:theme="@style/ThemeOverlay.AppCompat.Light"
                        app:boxBackgroundMode="none"
                        app:hintTextAppearance="@style/MyHintText"
                        app:passwordToggleEnabled="true">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/input_user_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/editTextBackground"
                            android:drawableStart="@drawable/ic_password"
                            android:focusableInTouchMode="true"
                            android:fontFamily="@font/segoe_ui"
                            android:hint="@string/password"
                            android:imeOptions="actionNext"
                            android:inputType="textNoSuggestions|textPassword"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:background="@drawable/signout"
                    android:ems="12"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:padding="5dp"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/forgot_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:padding="5dp"
                    android:text="@string/forgot_password"
                    android:textAllCaps="false"
                    android:textColor="@color/black_overlay"
                    android:textSize="12sp" />


            </LinearLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progress_signup"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:pointerIcon="arrow"
            android:progressDrawable="@android:drawable/ic_notification_overlay"
            android:progressTintMode="multiply"
            android:visibility="gone" />


    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>